syntax = "proto3";

package warehouse.v1;

option go_package = "github.com/OlegDokuchaev/clean-ddd-app/api-gateway/proto/warehouse/v1;warehouse_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

//
// ItemService provides operations for managing items in the warehouse.
//
service ItemService {
  rpc ReserveItem(ReserveItemRequest) returns (google.protobuf.Empty);

  rpc ReleaseItem(ReleaseItemRequest) returns (google.protobuf.Empty);

  rpc GetAllItems(google.protobuf.Empty) returns (GetAllItemsResponse);
}

//
// ProductService provides operations for managing products.
//
service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}

//
// ProductImageService provides operations for managing product images.
//
service ProductImageService {
  rpc UpdateImage(stream UpdateImageRequest) returns (google.protobuf.Empty);
  rpc GetImage(GetImageRequest) returns (stream GetImageResponse);
}

//
// Message definitions for ItemService
//

message ReserveItemRequest {
  repeated ItemInfo items = 2;
}

message ReleaseItemRequest {
  repeated ItemInfo items = 2;
}

message GetAllItemsResponse {
  repeated Item items = 1;
}

message Item {
  string item_id = 1;
  int32 count = 2;
  Product product = 3;
  string version = 4;
}

message ItemInfo {
  string product_id = 1;
  int32 count = 2;
}

//
// Message definitions for ProductService
//

message CreateProductRequest {
  string name = 1;
  double price = 2;
}

message CreateProductResponse {
  string product_id = 1;
}

message Product {
  string product_id = 1;
  string name = 2;
  double price = 3;
  google.protobuf.Timestamp created = 4;
}

//
// Message definitions for ProductImageService
//

message UpdateImageRequest {
  oneof data {
    UpdateImageInfo info = 1;
    bytes chunk_data = 2;
  }
}

message UpdateImageInfo {
  string product_id = 1;
  string content_type = 2;
}

message GetImageRequest {
  string product_id = 1;
}

message GetImageResponse {
  oneof data {
    GetImageInfo info = 1;
    bytes chunk_data = 2;
  }
}

message GetImageInfo {
  string content_type = 1;
}
